crates/ndc-odata/tests/snapshots/lib__tests__goldenfiles__query__field_selection.json.snap
---
source: crates/ndc-odata/tests/lib.rs
expression: "request.send().unwrap().json::<serde_json::Value>().unwrap()"
input_file: crates/ndc-odata/tests/goldenfiles/query/field_selection.json
---
[
  {
    "rows": [
      {
        "first_name": "Russell",
        "last_name": "Whyte"
      },
      {
        "first_name": "Scott",
        "last_name": "Ketchum"
      },
      {
        "first_name": "Ronald",
        "last_name": "Mundy"
      },
      {
        "first_name": "Javier",
        "last_name": "Alfred"
      },
      {
        "first_name": "Willie",
        "last_name": "Ashmore"
      },
      {
        "first_name": "Vincent",
        "last_name": "Calabrese"
      },
      {
        "first_name": "Clyde",
        "last_name": "Guess"
      },
      {
        "first_name": "Keith",
        "last_name": "Pinckney"
      },
      {
        "first_name": "Marshall",
        "last_name": "Garay"
      },
      {
        "first_name": "Ryan",
        "last_name": "Theriault"
      },
      {
        "first_name": "Elaine",
        "last_name": "Stewart"
      },
      {
        "first_name": "Sallie",
        "last_name": "Sampson"
      },
      {
        "first_name": "Joni",
        "last_name": "Rosales"
      },
      {
        "first_name": "Georgina",
        "last_name": "Barlow"
      },
      {
        "first_name": "Angel",
        "last_name": "Huffman"
      },
      {
        "first_name": "Laurel",
        "last_name": "Osborn"
      },
      {
        "first_name": "Sandy",
        "last_name": "Osborn"
      },
      {
        "first_name": "Ursula",
        "last_name": "Bright"
      },
      {
        "first_name": "Genevieve",
        "last_name": "Reeves"
      },
      {
        "first_name": "Krista",
        "last_name": "Kemp"
      }
    ]
  }
]
