crates/ndc-odata/tests/snapshots/lib__tests__goldenfiles__query__relationships.json.snap
---
source: crates/ndc-odata/tests/lib.rs
expression: "request.send().unwrap().json::<serde_json::Value>().unwrap()"
input_file: crates/ndc-odata/tests/goldenfiles/query/relationships.json
---
[
  {
    "rows": [
      {
        "first_name": "Russell",
        "last_name": "Whyte",
        "best_friend": {
          "first_name": "Scott",
          "last_name": "Ketchum"
        }
      },
      {
        "first_name": "Scott",
        "last_name": "Ketchum",
        "best_friend": {
          "first_name": "Russell",
          "last_name": "Whyte"
        }
      },
      {
        "first_name": "Ronald",
        "last_name": "Mundy",
        "best_friend": {
          "first_name": "Scott",
          "last_name": "Ketchum"
        }
      },
      {
        "first_name": "Javier",
        "last_name": "Alfred",
        "best_friend": {
          "first_name": "Vincent",
          "last_name": "Calabrese"
        }
      },
      {
        "first_name": "Willie",
        "last_name": "Ashmore",
        "best_friend": {
          "first_name": "Vincent",
          "last_name": "Calabrese"
        }
      },
      {
        "first_name": "Vincent",
        "last_name": "Calabrese",
        "best_friend": {
          "first_name": "Javier",
          "last_name": "Alfred"
        }
      },
      {
        "first_name": "Clyde",
        "last_name": "Guess",
        "best_friend": {
          "first_name": "Keith",
          "last_name": "Pinckney"
        }
      },
      {
        "first_name": "Keith",
        "last_name": "Pinckney",
        "best_friend": {
          "first_name": "Clyde",
          "last_name": "Guess"
        }
      },
      {
        "first_name": "Marshall",
        "last_name": "Garay",
        "best_friend": {
          "first_name": "Keith",
          "last_name": "Pinckney"
        }
      },
      {
        "first_name": "Ryan",
        "last_name": "Theriault",
        "best_friend": {
          "first_name": "Elaine",
          "last_name": "Stewart"
        }
      },
      {
        "first_name": "Elaine",
        "last_name": "Stewart",
        "best_friend": {
          "first_name": "Ryan",
          "last_name": "Theriault"
        }
      },
      {
        "first_name": "Sallie",
        "last_name": "Sampson",
        "best_friend": {
          "first_name": "Joni",
          "last_name": "Rosales"
        }
      },
      {
        "first_name": "Joni",
        "last_name": "Rosales",
        "best_friend": {
          "first_name": "Sallie",
          "last_name": "Sampson"
        }
      },
      {
        "first_name": "Georgina",
        "last_name": "Barlow",
        "best_friend": {
          "first_name": "Angel",
          "last_name": "Huffman"
        }
      },
      {
        "first_name": "Angel",
        "last_name": "Huffman",
        "best_friend": {
          "first_name": "Georgina",
          "last_name": "Barlow"
        }
      },
      {
        "first_name": "Laurel",
        "last_name": "Osborn",
        "best_friend": {
          "first_name": "Sandy",
          "last_name": "Osborn"
        }
      },
      {
        "first_name": "Sandy",
        "last_name": "Osborn",
        "best_friend": {
          "first_name": "Laurel",
          "last_name": "Osborn"
        }
      },
      {
        "first_name": "Ursula",
        "last_name": "Bright",
        "best_friend": {
          "first_name": "Krista",
          "last_name": "Kemp"
        }
      },
      {
        "first_name": "Genevieve",
        "last_name": "Reeves",
        "best_friend": {
          "first_name": "Ursula",
          "last_name": "Bright"
        }
      },
      {
        "first_name": "Krista",
        "last_name": "Kemp",
        "best_friend": {
          "first_name": "Ursula",
          "last_name": "Bright"
        }
      }
    ]
  }
]
